2007-10-23  Hans Boehm <Hans.Boehm@hp.com> (Really Manuel Serrano)

	* Makefile.direct: Invoke $(MAKE) instead of make.

2007-10-23  Hans Boehm <Hans.Boehm@hp.com>

	* doc/scale.html: Reflect gc7 thread local allocation behavior.

2007-10-23  Hans Boehm <Hans.Boehm@hp.com> (really Petter Urkedal)

	* include/extra/gc.h, include/extra/gc_cpp.h: New.
	* include/include.am: Install gc.h and gc_cpp.h in $(prefix)/include
	again.
	* Makefile.in: Regenerate.

2007-08-15  Hans Boehm <Hans.Boehm@hp.com> (really Samuel Thibault)
	
	* pthread_support.c (GC_thr_init): Use sysconf(_SC_NPROCESSORS_ONLN)
	for HURD.

2007-08-14  Hans Boehm <Hans.Boehm@hp.com> (really David Daney)

	* include/private/gcconfig.h: Add Linux/mips-64 support.

2007-08-14  Hans Boehm <Hans.Boehm@hp.com> (really mostly Samuel Thibault)

	* dbg_mlc.c: Use random() on all glibc systems.
	* mach_dep.c (GC_with_callee_saves_pushed): Don't use getcontext() on
	HURD.  Add comment.
	* pthread_stop_world.c (GC_suspend_handler, GC_stop_init): Accomodate
	systems without SA_SIGINFO.

2007-08-14  Hans Boehm <Hans.Boehm@hp.com> (partly really Henrik Theiling)

	* include/gc.h (GC_PTR_STORE): Fix non-DEBUG parentheses.
	* tests/test.c (run_one_test): Add GC_PTR_STORE test.
	No longer test for RS6000.

2007-08-03  Hans Boehm <Hans.Boehm@hp.com>
	
	* alloc.c, backgraph.c, headers.c, include/private/gc_priv.h:
	Maintain GC_our_memory and GC_n_memory.
	* dbg_mlc.c (GC_print_smashed_obj): Improve message.
	(GC_print_all_smashed_proc): Pass client object address instead of
	base.
	* dyn_load.c (sort_heap_sects): New.  (GC_register_map_entries):
	Register sections that are contiguous and merged with our heap.
	* malloc.c, os_dep.c (GC_text_mapping): Check for just base name
	of libraries.
	* malloc.c (calloc): Check for special callers even with
	USE_PROC_FOR_LIBRARIES. Move assertion.  Add rudimentary
	malloc/free tracing.
	* misc.c: No longer call GC_init_lib_bounds explicitly.