@@ -1,3 +1,8 @@
+2007-10-23  Hans Boehm <Hans.Boehm@hp.com>
+
+	* malloc.c: Update GC_large_allocd_bytes on explicit deallocation.
+	* allchblk.c: Sanity check GC_max_large_allocd_bytes.
+
 2007-10-23  Hans Boehm <Hans.Boehm@hp.com> (Really Manuel Serrano)
 
 	* Makefile.direct: Invoke $(MAKE) instead of make.
